# tensorrtx

./: .gitignore
yolov8/: CMakeLists.txt  README.md
yolov8/include/: utils.h
yolov8/plugin/: yololayer.cu
